--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,26 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
+          plugin_achievements: yes
+          plugin_achievements_display: compact
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
+          plugin_calendar: yes
+          plugin_calendar_limit: 1
+          plugin_habits: yes
+          plugin_habits_charts_type: graph
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
+          plugin_habits_trim: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -46,3 +66,9 @@ jobs:
           plugin_languages_sections: recently-used
           plugin_languages_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
           plugin_languages_threshold: 0%
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
+          plugin_notable_types: commit
+          plugin_stars: yes
+          plugin_stars_limit: 4
