--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,19 +26,13 @@ jobs:
 
           # Options
           user: jesspig
-          template: classic
+          template: terminal
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: all
-          plugin_activity_limit: 5
-          plugin_activity_load: 300
-          plugin_activity_visibility: all
           plugin_calendar: yes
           plugin_calendar_limit: 1
           plugin_habits: yes
@@ -70,5 +64,3 @@ jobs:
           plugin_notable_from: organization
           plugin_notable_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
           plugin_notable_types: commit
-          plugin_stars: yes
-          plugin_stars_limit: 4
