--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,24 +25,15 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: jesspig
-          template: terminal
+          template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_calendar: yes
           plugin_calendar_limit: 1
-          plugin_habits: yes
-          plugin_habits_charts_type: graph
-          plugin_habits_days: 14
-          plugin_habits_facts: yes
-          plugin_habits_from: 200
-          plugin_habits_languages_limit: 8
-          plugin_habits_languages_threshold: 0%
-          plugin_habits_trim: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -51,16 +42,14 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_details: percentage
-          plugin_languages_ignored: html,css
-          plugin_languages_limit: 10
+          plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
-          plugin_languages_sections: recently-used
+          plugin_languages_sections: most-used
           plugin_languages_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
           plugin_languages_threshold: 0%
           plugin_notable: yes
           plugin_notable_from: organization
-          plugin_notable_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
           plugin_notable_types: commit
