--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,9 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
+          #  - public_repo
+          #  - read:project
+          #  - repo
           # The following additional scopes may be required:
           #  - read:org      (for organization related metrics)
           #  - read:user     (for user related data)
@@ -25,15 +28,22 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
+          user: jesspig
           template: classic
           base: header, activity, community, repositories, metadata
+          config_octicon: yes
           config_timezone: Asia/Shanghai
+          config_twemoji: yes
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_calendar: yes
           plugin_calendar_limit: 1
+          plugin_followup: yes
+          plugin_followup_archived: yes
+          plugin_followup_indepth: yes
+          plugin_followup_sections: user
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -42,14 +52,62 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_details: percentage
+          plugin_languages_ignored: html.css
           plugin_languages_limit: 8
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
-          plugin_languages_skipped: jesspig,metrics,hexo-theme-webstack,blog,Daily-Article-Management-CN,techblog-config,Techblog-Article-Management-EN,88wGen,techblog-en,web-example,jesspig.github.io,www-config
           plugin_languages_threshold: 0%
+          plugin_leetcode: yes
+          plugin_leetcode_limit_recent: 2
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved,skills,recent
+          plugin_leetcode_user: .user.login
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_repositories_limit: 4
+          plugin_lines_sections: base
           plugin_notable: yes
-          plugin_notable_from: organization
+          plugin_notable_from: all
+          plugin_notable_repositories: yes
           plugin_notable_types: commit
+          plugin_pagespeed: yes
+          plugin_pagespeed_detailed: yes
+          plugin_pagespeed_url: .user.website
+          plugin_projects: yes
+          plugin_projects_limit: 4
+          plugin_skyline: yes
+          plugin_skyline_compatibility: yes
+          plugin_skyline_frames: 60
+          plugin_skyline_quality: 0.5
+          plugin_skyline_settings: {
+  "url": "https://skyline.github.com/${login}/${year}",
+  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+  "wait": 1,
+  "hide": "button, footer, a"
+}
+
+          plugin_skyline_year: current-year
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+          plugin_stargazers_charts_type: graph
+          plugin_stargazers_days: 14
+          plugin_stargazers_worldmap: yes
+          plugin_steam: yes
+          plugin_steam_achievements_limit: 2
+          plugin_steam_games_limit: 1
+          plugin_steam_playtime_threshold: 2
+          plugin_steam_recent_games_limit: 1
+          plugin_steam_sections: player,most-played, recently-played
+          plugin_steam_user: jesspig552
+          plugin_stock: yes
+          plugin_stock_duration: 6mo
+          plugin_stock_interval: 1d
+          plugin_stock_symbol: SPY
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: activity
+          plugin_traffic: yes
