--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -73,5 +73,5 @@ jobs:
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: icons
-          plugin_topics_sort: activity
+          plugin_topics_sort: stars
           plugin_traffic: yes
