--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,9 +30,9 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_achievements_threshold: X
           plugin_calendar: yes
           plugin_calendar_limit: 1
           plugin_followup: yes
